--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<header>
+  <nav>
+    <div class="logo">Logo</div>
+    <div class="menu">
+      <ul>
+        <li>Home</li>
+        <li>Products</li>
+        <li>Services</li>
+        <li>Price</li>
+        <li>Profile</li>
+      </ul>
+    </div>
+  </nav>
+</header>
